-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.14
-
Component/s: Bootloader
-
Environment:
Original Xbox (rev 1.3), Philips DVD drive
-
Module:
-
External URL:
-
Epic Link:
ATAPI DVD drive (Philips) is not detected on real hardware Xbox (revision 1.3) for some reason. Tested by Daniel Reimer.
Cromwell BIOS detects the drive without issues, its IDE driver code is located here: https://github.com/XboxDev/cromwell/blob/master/drivers/ide/BootIde.c
Debug log attached.
- blocks
-
CORE-16692 UniATA does not recognize Xbox DVD drive, so it's not possible to boot from it
-
- Resolved
-
- is blocked by
-
CORE-16220 FreeLoader does not support ATAPI DVD-ROM on Xbox
-
- Resolved
-