[FREELDR] Fix IDE driver failures on real hardware

* Changes in device detection code
    * Properly check device signature
    * Сorrectly reset the IDE controller
    * Remove check for device type code
* Fix CD-ROM sector read issue
    * Changed ATAPI packet opcode to be more universal (Some devices may not have READ12 support)
    * Always use 2048 bytes as sector size when reading the data from a disc
    * Modify WaitForFlags() to stop polling if the error bit was set
    * Changed timeout to 31 seconds (ATA default value)
* Add more informational messages in DEBUG mode
* Fix invalid IDE register value
* Fix registers names

CORE-16628 CORE-16216